  the netcdf_utilities_mod.f90 

- Updated dewpoint equation to avoid dividing by zero given a very unlikely
  scenario (r12832)

- More efficient implementation of adaptive inflation 

- Yongfei Zhang and Cecilia Bitz added improvements to the CICE model and 
  observation converters and forward operators. These changes also use the
  locations of the 'new' glade filesystem. They used CESM tag: cesm2_0_alpha06n

- Worked with Yongfei Zhang to remove prototype codes and more completely
  document observation converters and data sources for cice assimilation.

- removed 'allow_missing_in_clm' flag from the &assim_tools_nml namelist in
  the CICE work directory.  The flag moved to a different namelist and the
  CICE model doesn't care about it.

- increased the maximum number of input files to obs_diag from 100 to 10000.

- Updated the developer_tests to include more cases.

- Updated oned/obs_diag.f90 to support 'obs_seq.out' files.

- Better error and informational messages in various routines.

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ MMM DD YYYY :: summary of changes in next Manhattan update    hash: NNNNNNN
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

- first GIT release

- fixed bug in fill_inflation_restart tool which used the prior inflation mean
  and sd for both prior and posterior inflation files.  now correctly uses the
  posterior mean/sd if requested.

- fixed a typo in the location test script that prevented it from running

- additional functionality in the quad interpolation code, now supports grids
  which start at 90 (north) and end at -90 (south).

- if possible, send shorter MPI messages.  improves performance on some platforms
  and MPI implementations.

- add explicit call to initalize_utilities() where it was missing in a couple of
  the WRF utility routines.

- added an example of how to use a namelist to the text_to_obs.f90 observation
  converter program.

